--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/Avatar.png"
+          src="./assets/avatar.png"
           alt="Foto de Bruna sorrindo, usando camisa preta"
         />
         <p>@alveesbru</p>
